--- a/main.css
+++ b/main.css
@@ -1,4 +1,17 @@
 .window	{
 	height: 250px;
-	overflow: hidden;	
+	overflow: hidden;
+	position: relative;
+	/*width: 50%;*/
+}
+.slider_wrapper {
+/*	position: relative;
+	height: 200px;
+	left: 0;
+	width: 400%; /* VARIABLES by JS*/*/
+}
+
+.item {
+	opacity: 0;
+	position: absolute;
 }
