--- a/main.css
+++ b/main.css
@@ -1,17 +1,62 @@
-.window	{
-	height: 250px;
-	overflow: hidden;
+html, body {
+/*	width: 100%;
+	height: 100%;*/
+}
+.slider_wrapper	{
+	display: inline-block;
+/*	height: 362px;
+	width: 312px;
+*/}
+.slider_wrapper .panel-body {
+	display: block;
+	padding: 0;
+	height: 315px;
+	width: 312px;
 	position: relative;
-	/*width: 50%;*/
 }
-.slider_wrapper {
-/*	position: relative;
-	height: 200px;
-	left: 0;
-	width: 400%; /* VARIABLES by JS*/*/
+.slider_wrapper .panel-footer {
 }
-
+.items {
+	display: inline-block;
+	list-style-type: none;
+	padding: 0;
+	/*height: 200px;*/
+	margin-bottom: 0;
+}
 .item {
-	opacity: 0;
+	/*opacity: 0;*/
+	display: none;
+	/*position: absolute;*/
+	/*height: 100%;*/
+	/*overflow: hidden;*/
+}
+.description {
+	display: inline-block;
+	width: 312px;
+	height: 115px;
+	padding: 10px;
+}
+.description .details {
 	position: absolute;
+	bottom: 0;
+}
+.description h5 {
+	font: bold 18px Georgia, serif;
+	color: rgb(255, 94, 0);
+	margin-bottom: 0;
+}
+p.description {
+	overflow: hidden;
+	height: 35px;
+	padding: 0;
+}
+p.note {
+	color: #888;
+	font-weight: normal;
+	display: none;
+	padding: 0;
+}
+.item img {
+	max-width: 312px;
+	max-height: 200px;
 }
