--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@ html, body {
 }
 .slider_wrapper	{
 	display: inline-block;
+	background-image: url('./public/img/comp_plate_graybasic.png');
 /*	height: 362px;
 	width: 312px;
 */}
@@ -13,8 +14,55 @@ html, body {
 	height: 315px;
 	width: 312px;
 	position: relative;
+	overflow: hidden;
 }
-.slider_wrapper .panel-footer {
+.slider_wrapper .panel-footer .next, .slider_wrapper .panel-footer .prev {
+	background-repeat: no-repeat;
+	display: inline-block; 
+	width: 68px;
+  	height: 26px;
+  	line-height: 26px;
+  	color: #888;
+	
+}
+.slider_wrapper .panel-footer .next:focus, .slider_wrapper .panel-footer .prev:focus {
+	text-decoration: blink;
+}
+.slider_wrapper .panel-footer .prev {
+	background-image:  url('public/img/btn_ic_gray_left.png'), url('public/img/button_bg_white_left.png');
+	background-position: 10% 50%;
+  	text-align: right;
+  	padding-right: 10px;
+}
+.slider_wrapper .panel-footer .prev:hover, .slider_wrapper .panel-footer .next:hover {
+	color: white;
+	text-decoration: blink;
+	text-shadow: 1px 1px 3px black;
+}
+.slider_wrapper .panel-footer .prev:hover {
+	background-image:  url('public/img/btn_ic_gray_left.png'), url('public/img/button_bg_orange_left.png');
+}
+.slider_wrapper .panel-footer .next {
+	background-image:  url('public/img/btn_ic_gray_right.png'), url('public/img/button_bg_white_right.png');
+	background-position: 90% 50%;
+  	text-align: left;
+  	padding-left: 10px;
+}
+.slider_wrapper .panel-footer .next:hover {
+	background-image:  url('public/img/btn_ic_gray_right.png'), url('public/img/button_bg_orange_right.png');
+}
+.slider_wrapper .panel-footer .find {
+	background-image: url('public/img/button_bg_white_right.png');
+	background-position: 90% 50%;
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	display: inline-block; 
+	width: 130px;
+  	height: 26px;
+  	text-align: left;
+  	padding-left: 10px;
+  	line-height: 26px;
+  	color: #888;
 }
 .items {
 	display: inline-block;
@@ -30,17 +78,28 @@ html, body {
 	/*height: 100%;*/
 	/*overflow: hidden;*/
 }
-.description {
+.descriptions {
+	background-image: url('./public/img/comp_plate_graybasic.png');
+	position: absolute;
 	display: inline-block;
-	width: 312px;
-	height: 115px;
+	width: 100%;
+	height: 100%;
 	padding: 10px;
+	overflow: hidden;
 }
-.description .details {
+.details {
 	position: absolute;
 	bottom: 0;
 }
-.description h5 {
+.details a {
+	color: rgb(255, 94, 0);
+	text-decoration: underline;
+	cursor: pointer;
+}
+.details a:hover {
+	color: black;
+}
+.descriptions h5 {
 	font: bold 18px Georgia, serif;
 	color: rgb(255, 94, 0);
 	margin-bottom: 0;
@@ -55,6 +114,7 @@ p.note {
 	font-weight: normal;
 	display: none;
 	padding: 0;
+	overflow: hidden;
 }
 .item img {
 	max-width: 312px;
